2010-01-22  Robert Millan  <rmh.grub@aybabtu.com>

	Use generic grub_reboot() for i386-efi.

	* kern/efi/efi.c [__i386__] (grub_reboot): Remove.
	* kern/i386/efi/startup.S: Include `"../realmode.S"'.
	* kern/i386/realmode.S: Include `<grub/i386/pc/memory.h>'.

2010-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/ieee1275/init.c (grub_machine_set_prefix): Don't check for
	presence of "prefix" variable as it breaks when normal.mod is
	embedded.

2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_dimensions): Allocate on
	stack since heap is unavailable at that point.

2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/bsd.h (FREEBSD_N_BIOS_GEOM): Removed.
	(grub_freebsd_bootinfo): Rewritten.
	* loader/i386/bsd.c (grub_freebsd_boot): Use new grub_freebsd_bootinfo.

2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/misc.c (make_system_path_relative_to_its_root): Fix typo.

2010-01-21  Robert Millan  <rmh.grub@aybabtu.com>

	* po/POTFILES: Remove mkisofs-related files.  They have their own TLP
	domain now.

2010-01-20  Felix Zielcke <fzielcke@z-51.de>

	* util/misc.c (make_system_path_relative_to_its_root): Change the work
	around for handling "/" to the correct fix.  Fix a memory leak.  Use
	xstrdup instead of strdup.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/mips.rmk (kernel_img_HEADERS): Add env_private.h

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Optimise glyph lookup by Basic Multilingual Plane lookup array.

	* font/font.c (struct grub_font): New member 'bmp_idx'.
	(font_init): Initialise 'bmp_idx'.
	(load_font_index): Fill 'bmp_idx'.
	(find_glyph): Make inline. Use bmp_idx for BMP characters.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* video/fb/video_fb.c (grub_video_fb_scroll): Optimise by avoiding
	unnecessary calls.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Move context handling out of the kernel.
